After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 694077 - GtkItemFactory doesn't make GtkSeparatorMenuItems
GtkItemFactory doesn't make GtkSeparatorMenuItems
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
2.24.x
Other All
: Normal minor
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2013-02-18 11:44 UTC by fakey
Modified: 2013-02-18 18:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Make GtkItemFactory produce GtkSeparatorMenuItems. (863 bytes, patch)
2013-02-18 11:44 UTC, fakey
committed Details | Review

Description fakey 2013-02-18 11:44:37 UTC
Created attachment 236580 [details] [review]
Make GtkItemFactory produce GtkSeparatorMenuItems.

GtkItemFactory doesn't create real GtkSeparatorMenuItems, instead creating de-sensitive empty GtkMenuItems (probably because GtkSeparatorMenuItem was created after GtkItemFactory, and nobody remembered to change it). Some older applications like Pidgin still use GtkItemFactory despite the deprecation.
Comment 1 Cosimo Cecchi 2013-02-18 17:01:00 UTC
Review of attachment 236580 [details] [review]:

Looks good to me
Comment 2 Cosimo Cecchi 2013-02-18 18:40:33 UTC
Attachment 236580 [details] pushed as 950084a - Make GtkItemFactory produce GtkSeparatorMenuItems.

Pushed as I'm rolling a new 2.24 tarball.