Make GtkItemFactory produce GtkSeparatorMenuItems.

https://bugzilla.gnome.org/show_bug.cgi?id=694077